# bookz

./: .gitignore  README.md  app.py  db.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
