[project]
name = "bookz-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "streamlit==1.30.0",
    "duckdb==1.3.2",
    "pandas==2.2.3",
    "altair>=5.0.1",
    "requests>=2.31.0",
    "streamlit-authenticator>=0.11.0"
]
